--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ header {
     display: flex;
     border: 0;
     align-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
+    padding-left: 10px;
+    padding-top: 10px;
     background-color: #0d1117;
 
 }
